# llm-analysis-assistant

./: .gitignore  1、build.cmd  2、server.cmd  4、server+http.cmd  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt  server.py
cgi-bin/: cgi_utils.py  execGET.py  execPost.py  index.py
cgi-bin/html/js/: logs_scroll_show.js
config/: .gitignore
docs/: Cherry Studio.md  Navicat.md  Open WebUI.md  continue.md  langgraph-codeact.md  langgraph-supervisor.md  langgraph-swarm.md
docs/mind/: mcp-sse.xmind  mcp.xmind
pages/: execGET.py  execPost.py  myMCP.py  mySSE.py  myStdio.py
pages/html/js/: logs_scroll_show.js  mcp.js  sse.js
py3.11/: installed-extension.bat
src/llm_analysis_assistant/: __init__.py  __main__.py  server.py
src/llm_analysis_assistant/pages/: execGET.py  execPost.py  myMCP.py  mySSE.py  myStdio.py
src/llm_analysis_assistant/pages/html/js/: index.js  logs_scroll_show.js  mcp.js
src/llm_analysis_assistant/utils/: environ_utils.py  http_clientx.py  js_utils.py  logs_utils.py  mock_utils.py
utils/: cgi_utils.py  env_utils.py  environ_utils.py  http_clientx.py  js_utils.py  logs_utils.py  mock_utils.py
