[project]
name = "llm-logs-analysis"
version = "v0.2.0"
authors = [
    { name = "xuzexin", email = "1768527366@qq.com" },
]
description = "AGI Soldier Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyinstaller>=6.14.0",
    "uvicorn[standard]>=0.34.3",
    "openai>=1.84.0",
]
license = "Apache-2.0"
keywords = ["llm", "logs", "analysis", "uvicorn", "asgi", "mcp", "sse", "streamable-http"]

[project.urls]
Repository = "https://github.com/xuzexin-hz/llm-logs-analysis.git"
