[project]
name = "llm_analysis_assistant"
version = "v0.2.3"
description = "An LLM analysis assistant to help you understand and implement PMF"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = 'xuzexin,hz', email = '1768527366@qq.com' },
]
maintainers = [
    { name = 'xuzexin,hz', email = '1768527366@qq.com' },
]
keywords = ["llm", "analysis", "assistant", "uvicorn", "asgi", "websocket", "mcp", "stdio", "sse", "streamable-http"]
license = { text = "Apache-2.0" }
dependencies = [
    "uvicorn[standard]>=0.34.3",
]
classifiers = [
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Framework :: AsyncIO",
    "Programming Language :: JavaScript",
    "License :: OSI Approved :: Apache Software License",
    "Environment :: Web Environment",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Internet",
    "Topic :: Internet :: Log Analysis",
    "Topic :: Utilities"
]

[tool.uv]
dev-dependencies = ["pyinstaller>=6.14.0", "openai>=1.84.0", "mcp>=1.10.1", "pip>=25.1.1",]

[project.scripts]
llm_analysis_assistant = "llm_analysis_assistant:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/xuzexin-hz/llm-analysis-assistant.git"
Home-page = "https://xuzexin-hz.github.io/pmf-docs/"